# fashion-data-analysis

./: .env.example  .railwayignore  Amazon_PAAAPI5_API_综合报告.md  Dockerfile  EMERGENCY_DEPLOYMENT_FIX.md  GITHUB_DEPLOYMENT_COMPLETE.md  IMMEDIATE_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_FINAL_FIX_REPORT.md  README.md  TASK_COMPLETION_SUMMARY.md  TIKTOK_AMAZON_DASHBOARD_REPORT.md  deploy_config.json  deployment_checklist.md  deployment_next_steps.md  emergency_deployment_guide.md  final_summary.md  final_test_report.md  index.html  main.py  nixpacks.toml  performance_optimization.md  production_ready.md  pyproject.toml  quick_deployment_guide.md  railway-fix-plan.md  railway.json  railway_delete_guide.md  railway_deploy_validation.py  railway_deployment_fix_report.md  railway_deployment_guide.md  railway_major_fix_report.md  requirements.txt  requirements_data_cleaner.txt  security_checklist.md  setup_github.sh  start.sh  start_server.py  test_psutil.py  verify_railway_config.py  (+1 more)
.memory/: todo_meta.json  url_source_meta.json
app/: main.py
code/: PROJECT_SUMMARY.md  PROJECT_SUMMARY_DATA_CLEANER.md  README.md  README_DATA_CLEANER.md  README_database.md  amazon_scraper.py  config.py  data_cleaner.py  database.py  demo.py  demo_usage.py  export_data.py  main.py  requirements.txt  run.sh  run_example.py  settings.py  simple_example.py  test_database.py  test_export.json  test_main.py  test_scraper.py  tiktok_scraper.py
deployment/: .env.example  DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  setup.sh  vercel-api.js  vercel.json
docs/: README.md  administration_guide.md  amazon_data_research.md  api_reference.md  complete-step-by-step-tutorial.md  faq.md  quick_start.md  (+18 more)
(+535 files in other folders)
