[project]
name = "fashion-data-analysis"
version = "1.0.0"
description = "Fashion Data Analysis System - TikTok & Amazon Data Scraping"
authors = [
    {name = "Claude", email = "claude@anthropic.com"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fashion", "data-analysis", "tiktok", "amazon", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", 
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "jsonschema>=4.19.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "requests-cache>=1.1.0",
    "chardet>=5.2.0",
    "urllib3>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/iro1983/fashion-data-analysis"
Repository = "https://github.com/iro1983/fashion-data-analysis"
Documentation = "https://github.com/iro1983/fashion-data-analysis/blob/main/README.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py38']